[gd_scene load_steps=15 format=2]

[ext_resource path="res://Developers/Lilou/Shadow.png" type="Texture" id=1]
[ext_resource path="res://Developers/Julian/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Developers/Lilou/Circle.png" type="Texture" id=3]
[ext_resource path="res://Developers/Lilou/witch_sprite_sheet.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.843137, 0.372549, 0.784314, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.730263, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 0.25
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.35
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 3 )
hue_variation = 0.35
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color_ramp = SubResource( 3 )
hue_variation = 0.35
hue_variation_random = 1.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 17.5
height = 60.0

[sub_resource type="Animation" id=10]
resource_name = "anim_move_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spell:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 12.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Spell" type="Node2D" parent="."]
position = Vector2( 25, 12.5 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast" type="RayCast2D" parent="Spell"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="Line" type="Line2D" parent="Spell"]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 0.75, 1.75, 1.75, 1 )
end_cap_mode = 2

[node name="LineParticles" type="Particles2D" parent="Spell/Line"]
material = SubResource( 1 )
emitting = false
amount = 16
lifetime = 0.12
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Spell"]

[node name="Start" type="Position2D" parent="Spell"]

[node name="StartParticles" type="Particles2D" parent="Spell/Start"]
material = SubResource( 1 )
emitting = false
amount = 16
lifetime = 0.12
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="End" type="Position2D" parent="Spell"]

[node name="EndParticles" type="Particles2D" parent="Spell/End"]
material = SubResource( 1 )
amount = 16
lifetime = 0.12
fract_delta = false
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 8
vframes = 3
frame = 17

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_move_right = SubResource( 10 )
